--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,11 @@
 # SET ENVIRONMENT VARIABLES
 
-POSTGRES_URL=
-NODE_ENV=
+
+NODE_ENV=development
+
+#POSTGRES / CONTAINER
+POSTGRES_URL="postgresql://postgres_user:postgres_password@localhost:5432/postgres_db"
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=5432
