--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.24.0",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
     "@types/pg": "^8.16.0",
@@ -30,7 +31,9 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
+    "env-var": "^7.5.0",
     "express": "^5.2.1",
     "pg": "^8.18.0",
     "zod": "^4.3.6"
