New variables for email service

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@ PORT=3000
 NODE_ENV=development
 
 #POSTGRES / CONTAINER
-POSTGRES_URL="postgresql://postgres_user:postgres_password@localhost:5432/postgres_db"
+POSTGRES_URL=postgresql://postgres_user:postgres_password@localhost:5432/postgres_db
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
@@ -12,3 +12,9 @@ POSTGRES_PORT=5432
 
 #JWT
 JWT_SECRET= 
+
+#EMAIL
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
