--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.1.0",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
@@ -39,6 +40,7 @@
     "env-var": "^7.5.0",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^8.0.0",
     "pg": "^8.18.0",
     "zod": "^4.3.6"
   }
