--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "test": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --runInBand",
+    "test:watch": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --watch --runInBand",
+    "test:coverage": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --coverage --runInBand",
+    "migrate:test": "dotenv -e .env.test -- prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +32,8 @@
     "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.1.0",
+    "dotenv-cli": "^11.0.0",
     "jest": "^30.2.0",
     "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
