--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio",
-    "test": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --runInBand",
-    "test:watch": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --watch --runInBand",
-    "test:coverage": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --coverage --runInBand",
-    "migrate:test": "dotenv -e .env.test -- prisma migrate deploy"
+    "prisma:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -26,19 +22,14 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.1.0",
     "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
-    "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
     "dotenv-cli": "^11.0.0",
-    "jest": "^30.2.0",
     "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
-    "supertest": "^7.2.2",
-    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
