--- a/.env.template
+++ b/.env.template
@@ -5,16 +5,19 @@ NODE_ENV=development
 
 #POSTGRES / CONTAINER
 POSTGRES_URL=postgresql://postgres_user:postgres_password@localhost:5432/postgres_db
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_USER=db_user
+POSTGRES_PASSWORD=db_password
+POSTGRES_DB=db_name
 POSTGRES_PORT=5432
 
 #JWT
-JWT_SECRET= 
+JWT_SECRET=your_secret
 
 #EMAIL
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASSWORD=
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=example@email.com
+EMAIL_KEY=your_app_key
+
+#FRONTEND
+FRONTEND_URL=
