--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "tsx watch src/app.ts",
-    "build": "rimraf ./dist && tsc",
-    "start": "node dist/app.js",
+    "build": "rimraf ./dist && prisma generate && tsc",
+    "start": "prisma migrate deploy && node dist/app.js",
     "start:prod": "pnpm build && pnpm start",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
   },
@@ -26,8 +27,6 @@
     "@types/node": "^25.1.0",
     "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
-    "cross-env": "^10.1.0",
-    "dotenv-cli": "^11.0.0",
     "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
     "tsx": "^4.21.0",
