--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev": "tsx watch src/app.ts",
     "build": "rimraf ./dist && prisma generate && tsc",
     "start": "prisma migrate deploy && node dist/app.js",
+    "migrate:deploy": "prisma migrate deploy",
     "start:prod": "pnpm build && pnpm start",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
   },
