--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # SET ENVIRONMENT VARIABLES
 
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
 #POSTGRES / CONTAINER
 POSTGRES_URL=postgresql://postgres_user:postgres_password@localhost:5432/postgres_db
