--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,15 @@ POSTGRES_PORT=5432
 #JWT
 JWT_SECRET=your_secret
 
-#EMAIL
+#EMAIL - Development with SMTP and nodemailer
 EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_USER=example@email.com
 EMAIL_KEY=your_app_key
 
-#FRONTEND
+#EMAIL - Production with Resend
+RESEND_API_KEY=your_resend_api_key
+EMAIL_FROM=onboarding@resend.dev
+
+#FRONTEND (optional)
 FRONTEND_URL=http://localhost:3000
