--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^8.0.0",
     "pg": "^8.18.0",
+    "resend": "^6.9.1",
     "zod": "^4.3.6"
   }
 }
